# UDP-cross-platform

./: CMakeLists.txt  README.md
config/: config.ini
include/: config.hpp  udp_client.hpp  udp_server.hpp
src/: config.cpp  main.cpp  udp_client.cpp  udp_client_main.cpp  udp_server.cpp  udp_server_main.cpp
